fix(groups): group sidebar style on mobile

--- a/layouts/Layout.less
+++ b/layouts/Layout.less
@@ -168,6 +168,13 @@
       pointer-events: all;
     }
   }
+  #app {
+    &.is-collapsed-aside {
+      #aside {
+        transform: translateX(100%);
+      }
+    }
+  }
 }
 
 
